--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,13 @@
   margin: 1vw;
 }
 
+.search-bar{
+  padding: 1vw 1vh
+}
+.search-bar button{
+  margin-right: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
